# mir-extras

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
gatekeeper/: CMakeLists.txt  README.md  generate_protocols.py
trigger_client/: CMakeLists.txt  README.md  main.cpp
wayland-protocols/: ext-input-trigger-action-v1.xml  ext-input-trigger-registration-v1.xml
